--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@ user_data_0/
 user_data_1/
 user_data_2/
 user_data_3/
+user_data_4/
+user_data_5/
+user_data_6/
+user_data_7/
+
+share/
+templates/
+
+analytics_data.json
